<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PotatoInspection</string>
    <string name="app_common_title">PotatoInspection</string>
    <string name="ok">确定</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="submit">提交</string>
    <string name="cancel">取消</string>
    <string name="close">关闭</string>
    <string name="choose_sos_model">选择预警类别</string>
    <string name="login_upload_titel">选择上传方式</string>
    <!--任务中心  -->
    <string name="task_center_01_confirm">待确认</string>
    <string name="task_center_02_handle">待处理</string>
    <string name="task_center_03_approval">待审核</string>
    <string name="task_center_04_failed">未通过</string>
    <string name="task_center_05_success">已完成</string>
    <string name="task_center_field">田检检测</string>
    <string name="task_center_item_type">任务类型:</string>
    <string name="task_center_item_time">应完成日期:</string>
    <string name="task_center_item_code">种子批编码:</string>
    <string name="task_center_item_area">供应商地址:</string>
    <string name="task_center_item_company">供应商名称:</string>
    <string name="task_center_detail">任务详情</string>
    <string name="task_center_detail_motify">修改</string>
    <string name="task_center_detail_confirm">确认</string>
    <string name="task_center_detail_handle">处理</string>
    <string name="task_center_detail_type">任务类型</string>
    <string name="task_center_detail_type1_feild">一次田检</string>
    <string name="task_center_detail_type2_feild">二次田检</string>
    <string name="task_center_detail_type3_harvest">收获后检验</string>
    <string name="task_center_detail_type3_test_production">测产检验</string>
    <string name="task_center_detail_type4_storeroom">库房检验</string>
    <!--任务中心 - 测产、收获后 -->
    <string name="task_center_test_">检验记录</string>
    <!--任务中心 - 检验记录  -->
    <string name="task_center_test_record">检验记录</string>
    <string name="task_center_test_record_motify">修改记录</string>
    <string name="task_center_test_record_add">添加记录</string>
    <string name="task_center_test_record_area">面积测量</string>
    <string name="task_center_test_record_preview">数据预览</string>
    <string name="task_center_test_record_submit">提交数据</string>
    <string name="task_center_test_record_add_photo">添加照片</string>
    <string name="task_center_test_record_point">检测点</string>
    <string name="task_center_test_record_save">保存数据</string>
    <string name="task_center_test_record_not_null">检验记录不能为空</string>
    <!-- 个人中心  -->
    <string name="my_about">关于我们</string>
    <string name="my_edit">编辑资料</string>
    <string name="edit_img">头像</string>
    <string name="edit_img_success">头像修改成功</string>
    <string name="edit_img_failed">头像上传失败，请稍后再试</string>
    <string name="edit_name">姓名</string>
    <string name="edit_duty">职务</string>
    <!-- 登陆密码相关 -->
    <string name="edit_ok">确定修改</string>
    <string name="edit_pass">修改密码</string>
    <string name="edit_logout">退出登录</string>
    <string name="edit_hint_pass_old">请输入原密码</string>
    <string name="edit_hint_pass_new">请输入新密码</string>
    <string name="edit_hint_pass_twice">再次输入新密码</string>
    <!-- 任务统计  -->
    <string name="main_task_history_failed">历史未通过任务</string>
    <string name="main_task_history_success">历史已完成任务</string>
    <string name="main_task_history">历史任务</string>
    <!--main  -->
    <string name="main_01task_center">任务中心</string>
    <string name="main_02area">面积测量</string>
    <string name="main_03task_count">任务统计</string>
    <string name="main_04my">个人中心</string>
    <!--main  -->
    <string name="main_login">登陆</string>
    <string name="main_info">软件信息</string>
    <string name="main_map">我的位置</string>
    <!--map-->
    <string name="no_sos">尚无未处理的救援信息</string>
    <string name="pull_up_see_more_sos">上拉查看救援信息列表</string>
    <string name="push_up_see_more_sos">下拉隐藏救援信息列表</string>
    <!-- 个人中心 - 设置 - 更新 -->
    <string name="verisonupdate_now">正在检查最新版本</string>
    <string name="verisonupdate">检查更新</string>
    <string name="verisonupdate_wanted">检测到新版本，是否立即更新？</string>
    <string name="verisonupdate_ok">立即更新</string>
    <string name="verisonupdate_versionisnewset">当前已是最新版本，无需更新</string>
    <string name="verisonupdate_urlerror">打开URL错误，更新失败。</string>
    <!--二維碼相關 -->
    <string name="msg_default_status">请将二维码水平置于取景框内进行扫描 </string>
    <string name="msg_default_info">适度调整距离，便于更快扫描  </string>
    <string name="btn_voice">声音</string>
    <string name="btn_flashlight">闪光灯</string>
    <string name="capture_modify">扫码巡查 </string>
    <string name="capture_modify_qualified_btn">合格 </string>
    <string name="capture_modify_unqualified_btn">不合格 </string>
    <string name="capture_security_check_input">请输入抽查内容...</string>
    <string name="capture_modify_unqualified_input">请输入不合格的原因 </string>
    <string name="capture_modify_words_num_hint">还能输入200字</string>
    <string name="capture_modify_unqualified_text">不合格举证： </string>
    <string name="capture_device_info">扫码设备介绍  </string>
    <string name="capture_device_line">设备轨迹  </string>
    <string name="capture_detail">扫码巡查</string>
    <string name="capture_detail_ok">操作成功 </string>
    <string name="capture_detail_loading">正在获取数据 ... </string>

    <!-- 信息 -->
    <string name="about_address">企业地址：</string>
    <string name="about_summary">企业简介：</string>
    <string name="about_web">企业网址：</string>
    <string name="about_company">开发公司：</string>
    <string name="about_email">联系邮箱：</string>
    <string name="about_tel">联系电话：</string>
    <string name="about_version">当前版本：v</string>
    <string name="about_app">软件名称：</string>
    <!-- 异常或错误发生时 显示文字 -->
    <string name="login_sdcard_wrong">SD不存在或已损坏</string>
    <string name="login_file_wrong">文件出错。出错信息：</string>
    <string name="login_upload_picture">照片已保存到：</string>
    <!-- 异常或错误发生时 显示文字 -->
    <string name="err_no_network_connection">网络连接失败了哦~请检查一下网络后再试试~^_^</string>
    <string name="err_data">数据好像出错了呢~请稍等等再试嘛~^_^</string>
    <string name="err_json">数据处理的时候遇到了一点小问题~工程师们正在抢修~请稍后再试呦~^_^</string>
    <string name="err_uncaught">咦~系统遇到了未知的错误~工程师们正在抢修~请稍后再试呦~^_^</string>
    <string name="err_return_null">这里没有数据呢~换个地方再试试啦~^_^</string>
    <string name="err_timeout">系统连接超时，休息一下~稍后再试吧~^_^</string>
    <string name="err_access_server">访问服务器时遇到了一点小问题~工程师们正在抢修~请稍后再试呦~^_^</string>
    <string name="msg_loading">正在拼命加载数据.......</string>
    <string name="msg_loading_failed">加载数据失败T_T，请稍后再试</string>
    <string name="msg_user_cancel">取消操作╮(╯_╰)╭</string>
    <string name="id_tv_loadingmsg">正在加载.......</string>
    <!-- 下拉刷新 上拉刷新的 显示文字 -->
    <string name="label_pull_down">下拉刷新</string>
    <string name="label_pull_up">上拉查看更多</string>
    <string name="label_refreshing">正在加载数据.......</string>
    <string name="label_release">释放刷新</string>

    <!-- 扫码详情，履职评价 -->
    <string name="detail_choose_department">请选择要查看的部门</string>
    <string name="detail_hint_name">请输入履职人员姓名</string>
    <string name="detail_hint_info">请输入履职人员评价信息...</string>
    <string name="detail_custom_name">姓名：</string>
    <string name="detail_custom_time">时间：</string>
    <string name="detail_custom_content">内容：</string>
    <string name="detail_evaluate_wrong">阿哦~意见不能小于两个字哦！</string>
    <string name="capture_security_dialog_titel">扫码履职</string>
    <string name="capture_project_dialog_titel">扫码履职</string>
    <string name="capture_security_titel">七天内巡查次数</string>


    <!--数据加载 -->
    <string name="loading_data">数据加载中...</string>
    <!-- 登陆 -->
    <string name="loading_login">正在登陆...</string>
    <string name="loading_change_pass">修改中...</string>
    <!-- 上传时（报修、邻里、意见反馈） -->
    <string name="loading_upload">正在上传...</string>
    <!--上传头像 -->
    <string name="loading_img_user_header">正在上传头像...</string>
    <!--上传图片 -->
    <string name="loading_img_ready">准备上传图片...</string>
    <string name="loading_img_last">正在上传最后一张图片...</string>

    <string name="add_img_sample">取样</string>
    <string name="add_img_common">常规</string>
    <string name="add_img_hint">点击输入图片备注信息...</string>
    <string name="add_info_hint">点击输入备注信息...</string>
</resources>